# kuafucode

./: .gitignore  LICENSE  README.md  __init__.py  _write_agent.py  cli.py  config.py  install.sh  pyproject.toml  test_nvagent.py
.nvagent/: config.toml  memory.md
core/: agent.py  agent_constants.py  agent_context.py  agent_stream.py  agent_toolexec.py  analysis.py  cache.py  client.py  compaction.py  context.py  context_detection.py  events.py  execution.py  executor.py  feedback.py  index.py  loop.py  mcp.py  memory.py  planner.py  pricing.py  retrieval.py  safety.py  safety_models.py  session.py  symbols.py
core/client/: __init__.py  pricing.py  utils.py
core/execution/: __init__.py  compaction.py  executor.py  feedback.py  streaming.py  toolexec.py
core/extractors/: __init__.py  models.py  python.py
core/planning/: __init__.py  events.py
core/retrieval/: __init__.py  core.py  index.py
core/state/: __init__.py  cache.py  session.py
nvagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_config.py  test_context.py  test_exec.py  test_safety.py  test_session.py  test_tools.py  test_tui.py  test_v5_features.py
tools/: __init__.py  context.py  schemas.py
tools/handlers/: __init__.py  code.py  exec.py  file.py  git.py  memory.py  notebook.py  search.py  todo.py  url.py  vc.py
tui/: __init__.py  ansi.py  app.py  repl.py  ui.py
tui/app/: __init__.py  ansi.py  filewatcher.py  git.py  menu.py  readline.py  rendering.py  repl.py  repl.py.bak  spinner.py
tui/styles/: main.tcss
