[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvagent"
version = "0.1.0"
description = "NVIDIA-powered terminal coding agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",
    "httpx>=0.27",
    "textual>=0.70",
    "typer>=0.12",
]

[project.optional-dependencies]
http2 = ["h2>=4.0"]

[project.scripts]
nvagent = "nvagent.cli:app"

[tool.setuptools.package-dir]
"nvagent" = "."

[tool.setuptools]
packages = ["nvagent", "nvagent.core", "nvagent.tui"]

[tool.setuptools.package-data]
"nvagent" = ["tui/styles/*.tcss"]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
