[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvagent"
version = "0.1.0"
description = "NVIDIA-powered terminal coding agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",
    "httpx>=0.27",
    "textual>=0.70",
    "typer>=0.12",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
http2 = ["h2>=4.0"]

[project.scripts]
nvagent = "nvagent.cli:app"

[tool.setuptools.package-dir]
"nvagent" = "."

[tool.setuptools]
packages = ["nvagent", "nvagent.core", "nvagent.tools", "nvagent.tools.handlers", "nvagent.tui", "nvagent.tui.app"]

[tool.setuptools.package-data]
"nvagent" = ["tui/styles/*.tcss"]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "black>=24.1.0",
    "isort>=5.13.0",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
]

# Black formatter
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

# isort: group imports logically
[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["nvagent"]

# Ruff: fast Python linter
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # comprehensions
    "UP",     # pyupgrade
    "B",      # flake8-bugbear (except B008)
    "A",      # builtins shadowing
    "C90",    # mccabe (complexity)
    "PIE",    # flake8-pie
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in default argument
    "A001",   # variable name shadowing builtin (common in ML code)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # allow unused imports in __init__
